test/testdata/result/missing_property_error.lox
// error: 'result' value has no property 'foo'
// lint warning: property 'foo' has not been declared or assigned anywhere
(try 1).foo;
